src/objects/c2g__StatisticalBasisFilter__c.object
<CustomObject>
    <description>Stores the statistical basis filters for a variable allocation rule.</description>
    <fields>
        <fullName>c2g__AllocationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Rule</label>
        <referenceTo>c2g__AllocationRule__c</referenceTo>
        <relationshipLabel>Statistical Bases Filter</relationshipLabel>
        <relationshipName>StatisticalBasesFilter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Template</label>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Template Statistical Bases Filter</relationshipLabel>
        <relationshipName>TemplateStatisticalBasesFilter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FilterField__c</fullName>
        <label>Filter Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                </value>
                <value>
                    <fullName>Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Dimension 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Statistical Basis Filter</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Statistical Basis Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistical Bases Filter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>